Fixed clipping issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,35 @@ h5 {
 .text-secondary {
     color: var(--color-secondary);
 }
+
+@media (max-height: 500px) {
+    .small-height\:flex-row {
+        flex-direction: row !important;
+        gap: 1rem;
+    }
+
+    .small-height\:space-y-0 > * + * {
+        margin-top: 0 !important;
+    }
+    .overflow-y-auto {
+        overflow-y: auto !important;
+    }
+}
+
+@media (max-aspect-ratio: 4/3) {
+    .short-screen\:flex-row {
+        flex-direction: row !important;
+        gap: 1rem;
+    }
+
+    .short-screen\:space-y-0 > * + * {
+        margin-top: 0 !important;
+    }
+}
+
+@media (min-width: 1000px) and (max-height: 700px) {
+    .force-row {
+        flex-direction: row !important;
+        flex-wrap: wrap;
+    }
+}
